fix: resolving issue with css

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -35,7 +35,7 @@
   "aboutPageSubtitle": "Your trusted partner for professional office solutions in Montreal",
   "whoWeAre": "Who We Are",
   "aboutDesc1": "Bureau Connecté is your go-to destination for comprehensive office solutions in the heart of Montreal. We specialize in providing personalized assistance for all your office needs, from printing and copying to document preparation and computer support.",
-  "aboutDesc2": "Located conveniently near Berri-UQAM Metro station, we serve individuals, businesses, and students with reliable, professional services. Our bilingual team is committed to delivering quality results with a personal touch.",
+  "aboutDesc2": "Located conveniently near Saint-Michel Metro station, we serve individuals, businesses, and students with reliable, professional services. Our bilingual team is committed to delivering quality results with a personal touch.",
   "ourMission": "Our Mission",
   "missionText": "To provide accessible, professional office solutions that help our community succeed in their personal and professional endeavors.",
   "locationText": "Our Location",
